[package]
name = "messagetool"
version = "1.0.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.0"
pmd_message = { path = "../pmd_message" }
pmd_code_table = "0.1.0"