[package]
name = "pmd_message"
version = "2.0.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"
description = "A library that can read message*.bin files, used in 3ds pokemon mystery dungeon games"
repository = "https://github.com/marius851000/pmd_message"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.23"
binread = "2.1.1"
pmd_sir0 = "1.2.1"
binwrite = "0.2.1"
byteorder = "1.4.3"
pmd_code_table = "0.1.0"